@@ -1,3 +1,8 @@
+2003-08-15  Mikael Hallendal  <micke@imendio.com>
+
+	* loudmouth/lm-parser.c: (parser_end_node_cb):
+        - Don't crash on </stream:stream>. Fixes bug #117952
+
 2003-08-05  Mikael Hallendal  <micke@imendio.com>
 
         * Release 0.13.1
